# jarvis

./: .gitignore  README.md  package-lock.json  package.json
apps/desktop/: .env.example  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: commands.rs  main.rs  openai.rs  tool_call.rs
